test_suite/ui/zero_disciminant.stderr
error: Flags must have exactly one set bit
 --> ui/zero_disciminant.rs:8:5
  |
8 |     Zero = 0,
  |     ^^^^^^^^
